# oopppppp

./: .gitignore  CMakeLists.txt  CMakeSettings.json
include/: App.hpp  Character.hpp  Coin.hpp  CollisionHandler.hpp  Koopatroopa.hpp  Menu.hpp  Player.hpp  ScoreEffect.hpp  Star.hpp
oopppppp-main/: CMakeLists.txt
oopppppp-main/include/: AnimatedCharacter.hpp  App.hpp  Block.hpp  Goomba.hpp  Item.hpp  Map.hpp  Mushroom.hpp  Player.hpp  TopUI.hpp
oopppppp-main/src/: AppStart.cpp  AppUpdate.cpp  Block.cpp  Coin.cpp  CollisionHandler.cpp  Goomba.cpp  Mushroom.cpp  Player.cpp  ScoreEffect.cpp  Star.cpp  TopUI.cpp
src/: AppStart.cpp  AppUpdate.cpp  Goomba.cpp  Koopatroopa.cpp  Menu.cpp  Player.cpp  Star.cpp
